# Snake-Game

./: CMakeLists.txt
include/Snake/: Snake.hpp  Utils.hpp
include/Snake/game/: Apple.hpp  Game.hpp  Player.hpp
include/Snake/renderer/: RenderWindow.hpp
src/Snake/: Snake.cpp  Utils.cpp
src/Snake/game/: Apple.cpp  Game.cpp  Player.cpp
src/Snake/renderer/: RenderWindow.cpp
